<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background_color"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/inner_toolbar"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_back_screen"
            app:navigationIconTint="@color/black"
            app:title="Settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/provided_by"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/provider_description"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@mipmap/open_weather_logo"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/about">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/temperature"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeC"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/c"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeF"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/f"
                android:textAllCaps="false" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/one">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/pressure"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressure_mmHg"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/mmhg"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressure_hPa"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/hpa"
                android:textAllCaps="false" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/two">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/wind_speed"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_ms"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/m_s"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_kmh"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/km_h"
                android:textAllCaps="false" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>